--- a/offers.html
+++ b/offers.html
@@ -12,7 +12,7 @@
     
     <title>Document</title>
 </head>
-<body >
+<body  class="bg-primary">
 
     <div class="container-xl mg-auto  row  g-4  p-0    mt-5  ">
 
