--- a/_blank.html
+++ b/_blank.html
@@ -379,7 +379,7 @@
             </li>
 
             <li class="nav-item ">
-              <a class="nav-link text-dark text-green mx-3" href="#">FAQ</a>
+              <a class="nav-link text-dark text-green mx-3" href="FAQ.html" target="_blank">FAQ</a>
             </li>
             <li class="nav-item ">
               <a class="nav-link text-dark text-green mx-3" href="#">Contact</a>
