Contact page added forms and images

--- a/_blank.html
+++ b/_blank.html
@@ -382,7 +382,7 @@
               <a class="nav-link text-dark text-green mx-3" href="FAQ.html" target="_blank">FAQ</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link text-dark text-green mx-3" href="#">Contact</a>
+              <a class="nav-link text-dark text-green mx-3" href="contact.html" target="_blank">Contact</a>
             </li>
 
             <button
