offers section done

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
             aria-describedby="button-addon2"
           />
           <button
-            class="btn bg-green search hover-green py-3 col-md-2 text-light fw-semibold"
+            class="btn d-flex align-items-center justify-content-center flex-nowrap bg-green search hover-green py-3 col-md-2 text-light fw-semibold"
             type="button"
             id="button-addon2"
           >
@@ -627,6 +627,19 @@
 
     
     <main  class="">
+
+      <div class="row p-4 g-4">
+        <div class="col-lg-4 col-md-6">
+          <a href="#"><img src="assets/images/offer-3.webp" class="w-100" alt=""></a>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <a href="#"><img src="assets/images/offer-5.webp" class="w-100" alt=""></a>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <a href="#"><img src="assets/images/offer-4.webp" class="w-100" alt=""></a>
+        </div>
+        </div>
+
       <div class="row ">
       <aside class="col-md-2 h-90 bg-white position-sticky    ">      
     <div class="accordion accordion-flush " id="accordionFlushExample">
@@ -877,7 +890,7 @@
 
       </aside>
 
-         <section id="services-sec" class=" col-md-10   bg-warning h-60">
+         <section id="products-sec" class=" col-md-10   bg-warning h-60">
            <div class="row">
             <div class="col-lg-4">
               <img src="assets/images/Apples.webp" height="150" alt="">
