--- a/FAQ.html
+++ b/FAQ.html
@@ -20,7 +20,7 @@
 <body class="bg-gray-200">
 
 
-    <div class="w-65  h-90 mg-auto">
+    <div class="col-lg-7  h-90 mg-auto">
         <h1 class="text-center mt-5">FAQ</h1>
         <div class="accordion accordion-flush mt-4" id="accordionFlushExample">
             <div class="accordion-item mt-2">
