--- a/_blank.html
+++ b/_blank.html
@@ -18,6 +18,7 @@
     <link rel="icon" type="image/x-icon" href="https://pickbazar-react.vercel.app/favicon.ico">
   </head>
 <body>
+  <header class="h-60px">
   <nav class="navbar position-fixed bg-nav-light z-9 w-100 t-0 l-0 navbar-expand-lg  p-3 pb-md-4">
 
 
@@ -1004,6 +1005,7 @@
    
        </div>
    
-   </nav>
+   </nav> 
+   </header>
 </body>
 </html>
