Shops are grid now and more

--- a/shops.html
+++ b/shops.html
@@ -1051,14 +1051,14 @@
     <main>
 
         <div class="container col-lg-9 col-md-11 col-sm-12   mg-auto mt-5">
-            <p class="h3"> All Shops</p>
+            <p class="h3 ms-3"> All Shops</p>
 
             <div class="container-fluid  p-lg-3">
                 <div
                     class="row mt-2 justify-content-md-between justify-content-sm-center align-content-start shops g-4 mg-auto">
 
 
-                    <div class="card mt-3 d-flex flex-row align-items-center col-md-6 col-lg-4 row p-2">
+                    <a href="#" target="_blank" class="text-decoration-none text-dark d-block"><div class="card  d-flex flex-row align-items-center  row p-2">
                         <div class="w-25">
 
                             <img src="assets/images/Furniture-thumbnail.webp" alt=""
@@ -1080,11 +1080,8 @@
 
 
 
-                    </div>
-
-
-
-                    <div class="card mt-3 d-flex flex-row align-items-center col-md-6 col-lg-4  row p-2">
+                    </div></a>
+                    <a href="#" target="_blank" class="text-decoration-none text-dark d-block"><div class="card  d-flex flex-row align-items-center   row p-2">
                         <div class="w-25">
 
                             <img src="assets/images/fashion-thumbnail.webp" alt=""
@@ -1106,11 +1103,8 @@
 
 
 
-                    </div>
-
-
-
-                    <div class="card mt-3 d-flex flex-row align-items-center col-md-6 col-lg-4  row p-2">
+                    </div></a>
+                    <a href="#" target="_blank" class="text-decoration-none text-dark d-block"><div class="card  d-flex flex-row align-items-center  row p-2">
                         <div class="w-25">
 
                             <img src="assets/images/Backpack-thumbnail.webp" alt=""
@@ -1132,10 +1126,8 @@
 
 
 
-                    </div>
-
-
-                    <div class="card mt-3 d-flex flex-row align-items-center col-md-6 col-lg-4  row p-2">
+                    </div></a>
+                    <a href="#" target="_blank" class="text-decoration-none text-dark d-block"><div class="card  d-flex flex-row align-items-center  row p-2">
                         <div class="w-25">
 
                             <img src="assets/images/Makeup-thumbnail.webp" alt="" class="rounded-circle d-inline w-100">
@@ -1156,10 +1148,8 @@
 
 
 
-                    </div>
-
-
-                    <div class="card mt-3 d-flex flex-row align-items-center col-md-6 col-lg-4  row p-2">
+                    </div></a>
+                    <a href="#" target="_blank" class="text-decoration-none text-dark d-block"><div class="card  d-flex flex-row align-items-center  row p-2">
                         <div class="w-25">
 
                             <img src="assets/images/bakery-thumbnail.webp" alt="" class="rounded-circle d-inline w-100">
@@ -1180,12 +1170,8 @@
 
 
 
-                    </div>
-
-
-
-
-                    <div class="card mt-3 d-flex flex-row align-items-center col-md-6 col-lg-4  row p-2">
+                    </div></a>
+                    <a href="#" target="_blank" class="text-decoration-none text-dark d-block"><div class="card  d-flex flex-row align-items-center  row p-2">
                         <div class="w-25">
 
                             <img src="assets/images/Group-36321-thumbnail.webp" alt=""
@@ -1207,11 +1193,8 @@
 
 
 
-                    </div>
-
-
-
-                    <div class="card mt-3 d-flex flex-row align-items-center col-md-6 col-lg-4  row p-2">
+                    </div></a>
+                    <a href="#" target="_blank" class="text-decoration-none text-dark d-block"><div class="card  d-flex flex-row align-items-center  row p-2">
                         <div class="w-25">
 
                             <img src="assets/images/Publisher-logo-thumbnail.webp" alt=""
@@ -1233,10 +1216,7 @@
 
 
 
-                    </div>
-
-
-
+                    </div></a>
 
 
                 </div>
