seller register added

--- a/_blank.html
+++ b/_blank.html
@@ -1721,7 +1721,7 @@
 
               <button class="ms-3 btn bg-green hover-green">
                 <a
-                  href="#"
+                  href="seller.html"
                   target="_blank"
                   class="text-light fw-semibold text-decoration-none"
                   >Become a seller</a
