--- a/offers.html
+++ b/offers.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>_blank</title>
+    <title>Pickbazar | Offers</title>
     <link
       rel="icon"
       type="image/x-icon"
@@ -1715,7 +1715,7 @@
 
               <button class="ms-3 btn bg-green hover-green">
                 <a
-                  href="#"
+                  href="seller.html"
                   target="_blank"
                   class="text-light fw-semibold text-decoration-none"
                   >Become a seller</a
