--- a/shops.html
+++ b/shops.html
@@ -807,9 +807,10 @@
                             <a class="nav-link text-dark text-green mx-3" href="contact.html">Contact</a>
                         </li>
 
-                        <button class="ms-3 btn bg-green hover-green text-light fw-semibold">
-                            Become a seller
-                        </button>
+                        <button class="ms-3 btn bg-green hover-green ">
+                            <a href="seller.html" target="_blank" class="text-light fw-semibold text-decoration-none">Become a seller</a>
+                             
+                           </button>
 
                         <button class="ms-3 btn bg-green hover-green text-light fw-semibold" data-bs-toggle="modal"
                             data-bs-target="#loginModal">
