--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
               <a class="nav-link text-dark text-green mx-3" href="contact.html" >Contact</a>
             </li>
             <button class="ms-3 btn bg-green hover-green ">
-              <a href="#" target="_blank" class="text-light fw-semibold text-decoration-none">Become a seller</a>
+              <a href="seller.html" target="_blank" class="text-light fw-semibold text-decoration-none">Become a seller</a>
                
              </button>
 
